--- a/src/app/stagiaires/list/list.component.html
+++ b/src/app/stagiaires/list/list.component.html
@@ -41,43 +41,25 @@
     <br />
     <br />
 
-    <button
-      type="button"
-      (click)="showLi = 'A'"
-      [ngClass]="{ 'is-selected': showLi === 'A' }"
+    <button type="button" (click)="showLi = 'A'" [ngClass]="{ 'is-selected': showLi === 'A' }"
     >
       Tous
     </button>
 
-    <button
-      type="button"
-      class="woman"
-      (click)="showLi = 'F'"
-      [ngClass]="{ 'is-selected': showLi === 'F' }"
-    >
+    <button type="button" class="woman" (click)="showLi = 'F'" [ngClass]="{ 'is-selected': showLi === 'F' }">
       Femme
     </button>
 
-    <button
-      type="button"
-      class="man"
-      (click)="showLi = 'M'"
-      [ngClass]="{ 'is-selected': showLi === 'M' }"
-    >
+    <button type="button" class="man" (click)="showLi = 'M'" [ngClass]="{ 'is-selected': showLi === 'M' }">
       Homme
     </button>
 
-    <button
-      type="button"
-      class="other"
-      (click)="showLi = 'X'"
-      [ngClass]="{ 'is-selected': showLi === 'X' }"
-    >
+    <button type="button" class="other" (click)="showLi = 'X'" [ngClass]="{ 'is-selected': showLi === 'X' }">
       Autre
     </button>
 
-    <br />
-    <br />
+    <br/>
+    <br/>
   </div>
 
   <table>
@@ -128,18 +110,11 @@
               {{ stagiaire.birthDate | date : "L/dd/yyyy" }}
             </td>
             <td>
-              <button
-                mat-mini-flat
-                class="material-icons style"
-                (click)="openModal(template)"
-              >
+              <button mat-mini-flat class="material-icons style" (click)="openModal(template)">
                 <mat-icon>delete</mat-icon>
               </button>
               <ng-template #template>
-                <div
-                  class="modal-body text-center"
-                  style="background-color: white; border-radius: 0.4em"
-                >
+                <div class="modal-body text-center" style="background-color: white; border-radius: 0.4em">
                   <p style="font-size: 22px">Confirmer la suppression ?</p>
                   <button type="button" class="delete" (click)="confirm(stagiaire)">
                     Supprimer
