details .ts done

--- a/src/app/poes/component/detail/detail.component.html
+++ b/src/app/poes/component/detail/detail.component.html
@@ -1,1 +1,9 @@
-<p>detail works!</p>
+
+<!-- TODO AFFICHER DETAIL POE ET LISTE DE STAGIAIRES-->
+
+<ng-container *ngIf="poedetail">
+    <p>{{poedetail.trainees[0].firstName}}</p>
+    <p>{{poedetail.title}}</p>
+<ng-container>
+
+    
