--- a/src/app/poes/component/list/list.component.html
+++ b/src/app/poes/component/list/list.component.html
@@ -107,8 +107,9 @@
       <ng-container *ngFor="let poe of poes">
         <tr *ngIf="showLi === 'All' || poe.poeType === showLi">
           <td>
-            <span
-              [ngClass]="{
+            <span 
+            (click)="goToDetail(poe.id)"
+              [ngClass]=" {
                 bubble: true,
                 poei: poe.poeType === 'POEI',
                 poec: poe.poeType === 'POEC'
@@ -145,7 +146,7 @@
               >
                 <p style="font-size: 22px">Confirmer la suppression ?</p>
                 <button type="button" class="delete" (click)="confirm(poe)">
-                  Supprimer
+                  Supprimer  
                 </button>
                 <button type="button" (click)="decline()">Annuler</button>
               </div>
