poe-add-remove marche presque

--- a/src/app/poes/component/poe-add-remove-stagiaire/poe-add-remove-stagiaire.component.html
+++ b/src/app/poes/component/poe-add-remove-stagiaire/poe-add-remove-stagiaire.component.html
@@ -1,1 +1,18 @@
-<p>poe-add-remove-stagiaire works!</p>
+
+<ng-container *ngIf="stagiaires">
+    <ng-container *ngIf="poe" >
+
+
+        <p>poe-add-remove-stagiaire works!</p>
+    <ng-container *ngFor="let stagiaire of stagiaires">
+        <p>{{stagiaire.firstName}}  {{stagiaire.lastName}} </p>
+        
+        <button class="button" (click)="onRemove(stagiaire.id)">
+            remove
+        </button>
+        <button class="button" (click)="onAdd(stagiaire.id)">
+            add
+        </button>
+    </ng-container>
+    </ng-container>
+</ng-container>
