--- a/src/app/stagiaires/list/list.component.html
+++ b/src/app/stagiaires/list/list.component.html
@@ -37,6 +37,15 @@
     </div>
   </div>
 
+  <br>
+  <br>
+  <br> 
+  <br> 
+  <div id="headline">
+    <p>Liste des participants</p>
+  </div>
+  <br>
+
   <div id="topbuttons">
     <br />
     <br />
