--- a/src/app/poes/component/list/list.component.html
+++ b/src/app/poes/component/list/list.component.html
@@ -57,9 +57,19 @@
     </div>
   </div>
 
+  
+  <br>
+  <br>
+  <br> 
+  <br> 
+  <div id="headline">
+    <p>Liste des formations</p>
+  </div>
+  <br>
+
   <div id="topbuttons">
-    <br />
-    <br />
+    <br/>
+    <br/>
 
     <button type="button" (click)="showLi = 'All'" [ngClass]="{ 'is-selected': showLi === 'All' }">
       Tous
@@ -73,18 +83,17 @@
       POEC
     </button>
 
-    <br />
-    <br />
+    <br/>
+    <br/>
   </div>
 
   <table>
     <thead>
       <tr>
         <th>&nbsp;</th>
-        <th>Titre</th>
-        <th>Date du début</th>
-        <th>Date de fin</th>
-        <th>Type de Poe</th>
+        <th>Intitulé</th>
+        <th>Début</th>
+        <th>Fin</th>
         <th>&nbsp;</th>
       </tr>
     </thead>
@@ -110,9 +119,6 @@
           <td>
             {{ poe.endDate | date : "dd/MM/YYYY" }}
           </td>
-          <td>
-            {{ poe.poeType | uppercase }}
-          </td>
 
           <td>
             <button nmat-mini-flat class="material-icons style" (click)="openModal(template)">
@@ -135,7 +141,7 @@
     </tbody>
 
     <tr>
-      <td colspan="5" style="font-size: 20px; text-align: center; font-weight: bolder">
+      <td colspan="6" style="font-size: 20px; text-align: center; font-weight: bolder">
         <br />
         {{ getDisplayRowsNumber() }}/{{ poes.length }}
       </td>
