html de poe-add-remove

--- a/src/app/poes/component/detail/detail.component.html
+++ b/src/app/poes/component/detail/detail.component.html
@@ -3,6 +3,8 @@
 
 <ng-container *ngIf="poedetail">
     
+    <p>{{poedetail.title}}</p>
+    <p>poe d'id = {{poedetail.id}}</p>
 <!-- TODO AFFICHER DETAIL POE-->
 
 
