--- a/src/app/shared/formulaire-add-general/formulaire-add-general.component.html
+++ b/src/app/shared/formulaire-add-general/formulaire-add-general.component.html
@@ -205,7 +205,7 @@
         <br>
         <br>
         <div style="text-align: right;">
-        <button mat-raised-button type="submit" [disabled]="addForm.invalid">
+        <button type="submit" [disabled]="addForm.invalid">
           Ajouter
         </button>
       </div>
