--- a/src/app/stagiaires/list/list.component.scss
+++ b/src/app/stagiaires/list/list.component.scss
@@ -30,6 +30,7 @@
   width: 100%;
   top: 0;
   flex-direction: column;
+
   &:hover {
     display: flex;
   }
@@ -43,9 +44,11 @@
   0% {
     background-color: #2D3041, 80%;
   }
+
   50% {
     background-color: #2D3041, 40%;
   }
+
   100% {
     background-color: white;
     color: #2D3041;
@@ -79,19 +82,23 @@
     border: 4px solid;
     border-color: #2D3041;
     animation: coolAppear 0.35s ease-in 0s 1 forwards;
-    & + .menu-sub-list {
+
+    &+.menu-sub-list {
       display: flex;
     }
+
     svg {
       stroke: var(--color-text-primary);
     }
   }
+
   svg {
     flex-shrink: 0;
     width: 20px;
     height: 20px;
     margin-right: 10px;
     stroke: var(--color-text-primary-offset);
+
     &:nth-of-type(2) {
       margin-right: 0;
       position: absolute;
@@ -117,16 +124,16 @@
 
 #leftpanel {
   float: right;
-	display: flex;
-	flex-flow: row wrap;
-	justify-content: left;
-	align-items: flex-start;
-	align-content: flex-start;
-	height: 360px;
-	width: 300px;
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: left;
+  align-items: flex-start;
+  align-content: flex-start;
+  height: 360px;
+  width: 300px;
   border-radius: .4em;
   left: 150px;
-  top:150px;
+  top: 150px;
   position: fixed;
 }
 
@@ -134,12 +141,13 @@
   margin-left: 500px;
   margin-right: auto;
   width: 600px;
-  
+  position: fixed;
+
 }
 
-.material-icons.style { 
+.material-icons.style {
   cursor: pointer;
-  color: white; 
+  color: white;
   background-color: #2D3041;
   border-radius: .4em;
   width: 50px;
@@ -162,9 +170,9 @@
   }
 }
 
-.material-icons.style2 { 
+.material-icons.style2 {
   cursor: pointer;
-  color: white; 
+  color: white;
   background-color: #9698A0;
   border-radius: .4em;
   width: 50px;
@@ -188,47 +196,47 @@
 }
 
 button {
-    cursor: pointer;
-    font-family: arial, sans-serif;
-    font-size: 18px;
-    border: 3px solid;
-    border-color: #00000000;
-    background-color: #9698A0;
+  cursor: pointer;
+  font-family: arial, sans-serif;
+  font-size: 18px;
+  border: 3px solid;
+  border-color: #00000000;
+  background-color: #9698A0;
+  color: white;
+  border-radius: .4em;
+  width: 100px;
+  height: 32px;
+  margin: 10px 5px 10px 5px;
+
+  &.woman {
+    background-color: #CF1B6D;
     color: white;
-    border-radius: .4em;
-    width: 100px;
-    height: 32px;
-    margin: 10px 5px 10px 5px;
+  }
 
-    &.woman {
-      background-color: #CF1B6D;
-      color: white;
-    }
+  &.man {
+    background-color: #25AAE1;
+    color: white;
+  }
 
-    &.man {
-      background-color: #25AAE1;
-      color: white;
-    }
+  &.other {
+    background-color: #EC851D;
+    color: white;
+  }
 
-    &.other {
-      background-color: #EC851D;
-      color: white;
-    }
+  &.delete {
+    background-color: red;
+    color: white;
+  }
 
-    &.delete {
-      background-color: red;
-      color: white;
-    }
-    
-    &:hover {
-      background-color: #2D3041;
-      color: white;
-    }
-  
-    &:focus {
-      color: white;
-      animation: coolAppear 0.35s ease-in 0s 1 forwards;
-    }
+  &:hover {
+    background-color: #2D3041;
+    color: white;
+  }
+
+  &:focus {
+    color: white;
+    animation: coolAppear 0.35s ease-in 0s 1 forwards;
+  }
 }
 
 .button2 {
@@ -240,7 +248,7 @@ button {
   width: 100px;
   height: 32px;
   margin: 5px 5px 5px 5px;
-  
+
   &:hover {
     background-color: #2D3041;
     color: white;
@@ -257,118 +265,164 @@ button {
 
 
 table {
-    font-family: arial, sans-serif;
-    font-size: 20px;
-    height: auto;
-    border-collapse: collapse;
-    margin-left: 500px;
-    margin-right: auto;
-    width: 960px;
-    min-width: 500px;
-    color: #2D3041;
-    
+  font-family: arial, sans-serif;
+  font-size: 20px;
+  height: auto;
+  margin-left: 500px;
+  margin-right: auto;
+  width: 960px;
+  color: #2D3041;
+  table-layout: fixed;
+  border-collapse: collapse;
+  margin-top: 120px;
+  text-align: left;
   
-tbody{
 
+  ::-webkit-scrollbar {
+    width: 20px;
+    height: 10px;
+
+  }
+
+  ::-webkit-scrollbar-track {
+    border-right: 3px solid;
+    border-top: 3px solid;
+    border-bottom: 3px solid;
+    border-color: #F4F4F4;
+    border-top-right-radius: .4em;
+    border-bottom-right-radius: .4em;
+    background-color: #F4F4F4;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background-color: #9698A0;
+    border-top-right-radius: .4em;
+    border-bottom-right-radius: .4em;
+
+    &:hover {
+      background-color: #2D3041;
+      color: white;
+    }
+  }
+
+  thead {
+    display: block;
+    overflow: auto;
+    text-align: left;
+    width: 960px;
+    height: 50px;
+  }
+
+  th {
+    color: #2D3041;
+    background-color: white;
+    min-width: 150px;
+    width: 960px;
+  }
+
+  tbody {
     text-align: left;
     color: #2D3041;
-  
+    display: block;
+    overflow: auto;
+    height: 500px;
+    width: 960px;
+
+  }
+
   td {
+    min-width: 150px;
+    width: 960px;
+
     &:first-child {
-        span {
-            cursor: pointer;
-            display: inline-block;
-            width: 50px;
-            height: 50px;
-            margin: 10px 5px 10px 5px;
-            border-radius: .4em;
-            line-height: 50px;
-            vertical-align: middle;
-            text-align: center;
-            font-weight: bolder;
-            color: #2D3041;
-            &.male {
-                background-color: #25AAE1;
-                color: white;
+      span {
+        cursor: pointer;
+        display: inline-block;
+        width: 50px;
+        height: 50px;
+        margin-left: 5px;
+        border-radius: .4em;
+        line-height: 50px;
+        vertical-align: middle;
+        text-align: center;
+        font-weight: bolder;
+        color: #2D3041;
 
-                &:hover {
-                  background-color: #2D3041;
-                  color: white;
-                }
-              
-                &:focus {
-                  color: white;
-                  animation: coolAppear 0.35s ease-in 0s 1 forwards;
-                }
-            }
+        &.male {
+          background-color: #25AAE1;
+          color: white;
 
-            &.female {
-                background-color: #CF1B6D;
-                color: white;
+          &:hover {
+            background-color: #2D3041;
+            color: white;
+          }
 
-                &:hover {
-                  background-color: #2D3041;
-                  color: white;
-                }
-              
-                &:focus {
-                  color: white;
-                  animation: coolAppear 0.35s ease-in 0s 1 forwards;
-                }
-            }
-
-            &.other {
-              background-color: #EC851D;
-              color: white;
-
-              &:hover {
-                background-color: #2D3041;
-                color: white;
-              }
-            
-              &:focus {
-                color: white;
-                animation: coolAppear 0.35s ease-in 0s 1 forwards;
-              }
-            }
+          &:focus {
+            color: white;
+            animation: coolAppear 0.35s ease-in 0s 1 forwards;
+          }
         }
+
+        &.female {
+          background-color: #CF1B6D;
+          color: white;
+
+          &:hover {
+            background-color: #2D3041;
+            color: white;
+          }
+
+          &:focus {
+            color: white;
+            animation: coolAppear 0.35s ease-in 0s 1 forwards;
+          }
+        }
+
+        &.other {
+          background-color: #EC851D;
+          color: white;
+
+          &:hover {
+            background-color: #2D3041;
+            color: white;
+          }
+
+          &:focus {
+            color: white;
+            animation: coolAppear 0.35s ease-in 0s 1 forwards;
+          }
+        }
+      }
     }
 
- }
- 
+  }
 
-}
- 
-th{
-  color: #2D3041;
-  text-align: left;
-}
 
-tfoot{
-  font-weight: bolder;
-  color: #2D3041;
-}
+  tfoot {
+    font-weight: bolder;
+    color: #2D3041;
+  }
 
-tr:nth-child(even) {
-  color: #2D3041;
-  background-color: #F4F4F4;
-}
+  tr:nth-child(odd) {
+    color: #2D3041;
+    background-color: #F4F4F4;
+  }
 
-tr:nth-child(odd) {
-  color: #2D3041;
-}
+  tr:nth-child(even) {
+    color: #2D3041;
+  }
 }
 
 a {
   &.btn {
-      display: block;
-      text-decoration: none;
-      padding: .5em;
-      border-radius: .25em;
-      width: 5em;
-      margin: 0 auto;
-      text-align: center;
-      text-transform: uppercase;
+    display: block;
+    text-decoration: none;
+    padding: .5em;
+    border-radius: .25em;
+    width: 5em;
+    margin: 0 auto;
+    text-align: center;
+    text-transform: uppercase;
   }
 }
 
@@ -385,6 +439,7 @@ a {
   -moz-transition: opacity 0.3s 0s, visibility 0s 0.3s;
   transition: opacity 0.3s 0s, visibility 0s 0.3s;
 }
+
 .cd-popup.is-visible {
   opacity: 1;
   visibility: visible;
