--- a/src/app/stagiaires/list/list.component.html
+++ b/src/app/stagiaires/list/list.component.html
@@ -129,7 +129,7 @@
                   <button type="button" (click)="decline()">Annuler</button>
                 </div>
               </ng-template>
-              <button mat-mini-flat class="material-icons style2">
+              <button mat-mini-flat class="material-icons style2" (click)="goToUpdate(stagiaire.id)">
                 <mat-icon>edit</mat-icon>
               </button>
             </td>
