Updated trainee details frontend

--- a/src/app/stagiaires/detail/detail.component.html
+++ b/src/app/stagiaires/detail/detail.component.html
@@ -1,24 +1,70 @@
-<ng-container *ngIf="stagiaire">
-<div class="card"  >
- <div >
-  {{this.stagiaire.firstName}} {{this.stagiaire.lastName}}
-</div >
+<body>
+<div id="leftpanel">
+  <div id="title">
+    <p>> MENU</p>
+  </div>
 
-    <div > De genre {{stagiaire.gender | genre }} , </div>
-    <div > Je suis né le {{stagiaire.birthDate | date :  'dd/LL/yyyy'}}  </div>
-    <div class="card-text">contactez moi !!!!  </div>
-    <div > mél: {{stagiaire.email}} </div>
-    <div > tel: {{stagiaire.phoneNumber}} </div>
-    <div > ^^^^^ </div>
-    <div > ^^^^^^^^^ </div>
-    <div > ^^^^^^^^^^^^^^^^^^ </div>
-    <div > ^^^^^^^^^^^^^^^^^^^^^^^^ </div>
-    <div > ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ </div>     
-    <div>
-      <button type="button"  (click)="goToMenu()">
-       Quitter
-      </button>
-    </div>
+  <div>
+    <ul class="menu-list">
+      <div class="menu-item">
+        <button class="menu-button">• &nbsp;&nbsp;Formations</button>
+        <ul class="menu-sub-list">
+          <div class="menu-item"><button class="menu-button">Panorama</button></div>
+          <div class="menu-item"><button class="menu-button" (click)="goToPOESList()">Liste</button></div>
+        </ul>
+      </div>
+      <div class="menu-item">
+        <button class="menu-button">• &nbsp;&nbsp;Participants</button>
+        <ul class="menu-sub-list">
+          <div class="menu-item"><button class="menu-button">Panorama</button></div>
+          <div class="menu-item"><button class="menu-button" (click)="goToTraineesList()">Liste</button></div>
+        </ul>
+      </div>
+      <div class="menu-item">
+        <button class="menu-button">• &nbsp;&nbsp;Ajouter</button>
+        <ul class="menu-sub-list">
+          <div class="menu-item"><button class="menu-button" (click)="goToPOESAdd()">Formation</button></div>
+          <div class="menu-item"><button class="menu-button" (click)="goToTraineesAdd()">Participant</button></div>
+        </ul>
+      </div>
+      <div class="menu-item">
+        <button class="menu-button">• &nbsp;&nbsp;Statistiques</button>
+      </div>
+      <div class="menu-item">
+        <button class="menu-button">• &nbsp;&nbsp;Archives</button>
+      </div>
+    </ul>
+  </div>
 </div>
+
+<br>
+<br>
+<br>
+<br>
+
+<div id="headline">
+  Détail Participant
+</div>
+
+<br>
+
+
+<div class="detailsblock">
+  
+<ng-container *ngIf="stagiaire">
+
+ <div style="font-size: 50px;">
+  <p><span class="gender" [ngClass]="{
+    female: stagiaire.gender === 'F',
+    male: stagiaire.gender === 'M',
+    other: stagiaire.gender === 'X'
+  }">{{ stagiaire.gender | genre }}</span> {{this.stagiaire.firstName}} {{this.stagiaire.lastName | uppercase }}</p> 
+</div>
+
+    <div> Né.e le <span style="font-weight: bold;">{{stagiaire.birthDate | date :  'dd/LL/yyyy'}}</span> </div>
+    <div> {{stagiaire.email}} </div>
+    <div> {{stagiaire.phoneNumber}} </div> 
  
 </ng-container>
+</div>
+</body>
