--- a/src/app/stagiaires/detail/detail.component.scss
+++ b/src/app/stagiaires/detail/detail.component.scss
@@ -1,48 +1,329 @@
-$couleurTitre: rgb(244, 150, 57);
-$button-font-color: rgb(255, 255, 255);
-$button-background-color: rgb(177, 79, 79);
-$button-inactive-color: rgba(20, 20, 200);
+/**
+* SCSS Rules
+**/
 
-div{
-    button {
-        cursor: pointer;
-
-        background-color: $button-background-color;
-        // color: $button-inactive-color;
-        width: 5em;
-        height: 3em;
-        font-size: 20px;
-        border: 0.1em solid  rgb(14, 4, 4);;
+#headline {
+    font-family: arial, sans-serif;
+    text-align: left;
+    font-size: 26px;
+    font-weight: bolder;
+    color: #2D3041;
+    position: fixed;
+    left: 500px;
+    top: 100px;
+  }
+  
+  .menu-list {
+    margin: 0;
+    display: block;
+    width: 100%;
+    padding: 8px;
+  }
+  
+  .menu-sub-list {
+    display: none;
+    padding: 16px;
+    border-radius: 10px;
+    left: 100%;
+    right: 0;
+    z-index: 100;
+    width: 100%;
+    top: 0;
+    flex-direction: column;
+  
+    &:hover {
+      display: flex;
     }
-    &.card{
-
-        border-width: 100px ;
-        border: 0.1em solid  rgb(14, 4, 4);;
-        border-color: rgb(14, 4, 4);
-        width: 300px;
-        height: auto;
-        background-color: $couleurTitre;
-        text-align: center;
-        font-size: large;
-        li{
-            font-size: 30px;
-            border: 0.1em solid  rgb(14, 4, 4);;
-        }
-        p{
-            border-width: 100px ;
-            border-color: rgb(222, 10, 10);
-            font-size: 30px;
-            background-color: $couleurTitre;
-            border: 0.1em solid  rgb(14, 4, 4);;
-        }
-        div{
-
-            background-color: rgb(220, 184, 184);
-            border: 0em solid  rgb(14, 4, 4);;
-            &.card-text{
-                font-size: 30px;
-            }
-        }
+  }
+  
+  .menu-item {
+    position: relative;
+  }
+  
+  @keyframes coolAppear {
+    0% {
+      background-color: #2D3041, 80%;
     }
+  
+    50% {
+      background-color: #2D3041, 40%;
+    }
+  
+    100% {
+      background-color: white;
+      color: #2D3041;
+      border: 3px solid;
+      border-color: #2D3041;
+    }
+  }
+  
+  
+  .menu-button {
+    cursor: pointer;
+    font-family: arial, sans-serif;
+    font-size: 20px;
+    text-align: left;
+    text-indent: 16px;
+    border: none;
+    background-color: #9698A0;
+    color: white;
+    border-radius: .4em;
+    width: 220px;
+    height: 42px;
+    margin: 5px 0px 5px 0px;
+  
+    &:hover {
+      background-color: #2D3041;
+      color: white;
+    }
+  
+    &:focus {
+      color: #2D3041;
+      border: 4px solid;
+      border-color: #2D3041;
+      animation: coolAppear 0.35s ease-in 0s 1 forwards;
+  
+      &+.menu-sub-list {
+        display: flex;
+      }
+  
+      svg {
+        stroke: var(--color-text-primary);
+      }
+    }
+  
+    svg {
+      flex-shrink: 0;
+      width: 20px;
+      height: 20px;
+      margin-right: 10px;
+      stroke: var(--color-text-primary-offset);
+  
+      &:nth-of-type(2) {
+        margin-right: 0;
+        position: absolute;
+      }
+    }
+  
+    &:active {
+      background-color: #2D3041;
+      color: white;
+    }
+  }
+  
+  #title {
+    font-family: arial, sans-serif;
+    text-align: center;
+    font-size: 26px;
+    font-weight: bolder;
+    color: #2D3041;
+    width: 260px;
+    height: 42px;
+    margin: 25px 0px 0px 0px;
+  }
+  
+  #leftpanel {
+    float: right;
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: left;
+    align-items: flex-start;
+    align-content: flex-start;
+    height: 360px;
+    width: 300px;
+    border-radius: .4em;
+    left: 150px;
+    top: 150px;
+    position: fixed;
+  }
+  
+  #topbuttons {
+    margin-left: 500px;
+    margin-right: auto;
+    width: 600px;
+    position: fixed;
+  
+  }
+  
+  .material-icons.style {
+    cursor: pointer;
+    color: white;
+    background-color: #2D3041;
+    border-radius: .4em;
+    width: 50px;
+    height: 50px;
+    margin: 10px 5px 10px 5px;
+    float: right;
+  
+  
+    &:hover {
+      background-color: red;
+      color: white;
+    }
+  
+    &:focus {
+      color: white;
+      border: 3px solid;
+      border-color: #2D3041;
+      background-color: red;
+      animation: coolAppear 0.35s ease-in 0s 1 forwards;
+    }
+  }
+  
+  .material-icons.style2 {
+    cursor: pointer;
+    color: white;
+    background-color: #9698A0;
+    border-radius: .4em;
+    width: 50px;
+    height: 50px;
+    margin: 10px 5px 10px 5px;
+    float: right;
+  
+  
+    &:hover {
+      background-color: #2D3041;
+      color: white;
+    }
+  
+    &:focus {
+      color: #2D3041;
+      border: 3px solid;
+      border-color: #2D3041;
+      background-color: white;
+      animation: coolAppear 0.35s ease-in 0s 1 forwards;
+    }
+  }
+  
+  button {
+    cursor: pointer;
+    font-family: arial, sans-serif;
+    font-size: 18px;
+    border: 3px solid;
+    border-color: #00000000;
+    background-color: #9698A0;
+    color: white;
+    border-radius: .4em;
+    width: 100px;
+    height: 32px;
+    margin: 10px 5px 10px 5px;
 
+  
+    &.delete {
+      background-color: red;
+      color: white;
+    }
+  
+    &:hover {
+      background-color: #2D3041;
+      color: white;
+    }
+  
+    &:focus {
+      color: white;
+      animation: coolAppear 0.35s ease-in 0s 1 forwards;
+    }
+  }
+  
+  .button2 {
+    cursor: pointer;
+    border: none; // No border
+    background-color: #9698A0;
+    color: white;
+    border-radius: .4em;
+    width: 100px;
+    height: 32px;
+    margin: 5px 5px 5px 5px;
+  
+    &:hover {
+      background-color: #2D3041;
+      color: white;
+    }
+  
+    &:focus {
+      color: white;
+      border: 3px solid;
+      border-color: #2D3041;
+      background-color: white;
+      animation: coolAppear 0.35s ease-in 0s 1 forwards;
+    }
+  }
+  
+  
+  .detailsblock {
+    font-family: arial, sans-serif;
+    font-size: 26px;
+    height: auto;
+    border-collapse: collapse;
+    margin-left: 550px;
+    margin-right: auto;
+    margin-top: 60px;
+    width: 960px;
+    color: #2D3041;
+    position: fixed;
 }
+  
+  a {
+    &.btn {
+      display: block;
+      text-decoration: none;
+      padding: .5em;
+      border-radius: .25em;
+      width: 5em;
+      margin: 0 auto;
+      text-align: center;
+      text-transform: uppercase;
+    }
+  }
+  
+  .gender {
+    display: inline-block;
+    width: 50px;
+    height: 50px;
+    font-size: 30px;
+    margin-bottom: 9.5px;
+    border-radius: 15%;
+    line-height: 50px;
+    vertical-align: middle;
+    text-align: center;
+    font-weight: bolder;
+    color: white;
+    
+
+    &.male {
+      background-color: #25AAE1;
+    }
+
+    &.female {
+      background-color: #CF1B6D;
+      }
+
+    &.other {
+      background-color: #EC851D;
+      }
+    }
+  
+
+
+  .cd-popup {
+    position: fixed;
+    left: 0;
+    top: 0;
+    height: 100%;
+    width: 100%;
+    background-color: rgba(94, 110, 141, 0.9);
+    opacity: 0;
+    visibility: hidden;
+    -webkit-transition: opacity 0.3s 0s, visibility 0s 0.3s;
+    -moz-transition: opacity 0.3s 0s, visibility 0s 0.3s;
+    transition: opacity 0.3s 0s, visibility 0s 0.3s;
+  }
+  
+  .cd-popup.is-visible {
+    opacity: 1;
+    visibility: visible;
+    -webkit-transition: opacity 0.3s 0s, visibility 0s 0s;
+    -moz-transition: opacity 0.3s 0s, visibility 0s 0s;
+    transition: opacity 0.3s 0s, visibility 0s 0s;
+  }
+
