--- a/src/app/stagiaires/detail/detail.component.html
+++ b/src/app/stagiaires/detail/detail.component.html
@@ -48,6 +48,7 @@
 
 <br>
 
+<div class="photobox"></div>
 
 <div class="detailsblock">
   
@@ -64,7 +65,6 @@
     <div> Né.e le <span style="font-weight: bold;">{{stagiaire.birthDate | date :  'dd/LL/yyyy'}}</span> </div>
     <div> {{stagiaire.email}} </div>
     <div> {{stagiaire.phoneNumber}} </div> 
- 
 </ng-container>
 </div>
 </body>
