--- a/src/app/shared/formulaire-add-general/formulaire-add-general.component.html
+++ b/src/app/shared/formulaire-add-general/formulaire-add-general.component.html
@@ -56,7 +56,7 @@
 
         <mat-radio-group formControlName="gender">
           <mat-radio-button [value]="'F'" style="margin-right: 25px;">Femme</mat-radio-button>
-          <mat-radio-button [value]="'H'" style="margin-right: 25px;">Homme</mat-radio-button>
+          <mat-radio-button [value]="'M'" style="margin-right: 25px;">Homme</mat-radio-button>
           <mat-radio-button [value]="'X'">Autre</mat-radio-button>
         </mat-radio-group>
 
